--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "graphql-yoga": "^1.18.3",
     "nodemon": "^2.0.2"
   },
-  "script": {
+  "scripts": {
     "dev": "nodemon --exec babel-node src/server.js"
   }
 }
