--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
     "nodemon": "^2.0.2"
   },
