--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "haesooKr <gotn676@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
     "babel-cli": "^6.26.0",
     "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
