--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "author": "haesooKr <gotn676@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "babel-cli": "^6.26.0",
     "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
     "nodemon": "^2.0.2"
