--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.8.4",
     "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
+    "morgan": "^1.9.1",
     "nodemon": "^2.0.2"
   },
   "scripts": {
