--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@babel/node": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "dotenv": "^8.2.0",
+    "graphql-tools": "^4.0.6",
     "graphql-yoga": "^1.18.3",
+    "merge-graphql-schemas": "1.7.3",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2"
   },
