--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "graphql-yoga": "^1.18.3",
     "merge-graphql-schemas": "1.7.3",
     "morgan": "^1.9.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "prisma-client-lib": "^1.34.10"
   },
   "scripts": {
+    "deploy": "prisma deploy",
+    "generate": "prisma generate",
+    "prisma": "yarn run deploy && yarn run generate",
     "dev": "nodemon --exec babel-node src/server.js"
   }
 }
