--- a/package.json
+++ b/package.json
@@ -5,23 +5,35 @@
   "repository": "https://github.com/haesooKr/p-prisma.git",
   "author": "haesooKr <gotn676@gmail.com>",
   "license": "MIT",
+  "engines": {
+    "yarn": "1.19.2"
+  },
   "dependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "copy": "^0.3.2",
     "dotenv": "^8.2.0",
     "graphql-tools": "^4.0.6",
     "graphql-yoga": "^1.18.3",
     "merge-graphql-schemas": "1.7.3",
     "morgan": "^1.9.1",
-    "nodemon": "^2.0.2",
     "prisma-client-lib": "^1.34.10"
   },
   "scripts": {
     "deploy": "prisma deploy",
     "generate": "prisma generate",
     "prisma": "yarn run deploy && yarn run generate",
-    "dev": "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon --exec babel-node src/server.js",
+    "prebuild": "yarn run prisma",
+    "build": "babel src -d build",
+    "postbuild": "cd src && npx copy ./api/**/*.graphql ../api",
+    "start": "node build/server.js"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "nodemon": "^2.0.2"
   }
 }
