--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql-yoga": "^1.18.3",
     "merge-graphql-schemas": "1.7.3",
     "morgan": "^1.9.1",
+    "prisma": "^1.34.10",
     "prisma-client-lib": "^1.34.10"
   },
   "scripts": {
